force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Field__mdt/ucinn_ascendv2__Manual_Merge_Field__mdt.object-meta.xml
<CustomObject>
    <description>For display of fields on constituent and related records.</description>
    <label>Merge Field</label>
    <pluralLabel>Merge Fields</pluralLabel>
</CustomObject>