force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Field__mdt/fields/ucinn_ascendv2__Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>