force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Field__mdt/fields/ucinn_ascendv2__Order__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Order__c</fullName>
    <description>Order in which the fields should be displayed. Lowest will be displayed first.</description>
    <inlineHelpText>Order in which the fields should be displayed. Lowest will be displayed first.</inlineHelpText>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>