force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Field__mdt/listViews/Additional_Info.listView-meta.xml
<ListView>
    <fullName>Additional_Info</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ucinn_ascendv2__Manual_Merge_Tab__c</columns>
    <columns>ucinn_ascendv2__Field_API_Name__c</columns>
    <columns>ucinn_ascendv2__Type__c</columns>
    <columns>ucinn_ascendv2__Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Manual_Merge_Tab__c</field>
        <operation>equals</operation>
        <value>Additional_Info</value>
    </filters>
    <label>Additional Info</label>
    <language>en_US</language>
</ListView>