force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Field__mdt/listViews/All_Merge_Fields.listView-meta.xml
<ListView>
    <fullName>All_Merge_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>ucinn_ascendv2__Manual_Merge_Tab__c</columns>
    <columns>ucinn_ascendv2__Order__c</columns>
    <columns>NamespacePrefix</columns>
    <columns>DeveloperName</columns>
    <columns>ucinn_ascendv2__Field_API_Name__c</columns>
    <columns>ucinn_ascendv2__Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Merge Fields</label>
    <language>en_US</language>
</ListView>