force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Field__mdt/listViews/PG_Email.listView-meta.xml
<ListView>
    <fullName>PG_Email</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ucinn_ascendv2__Manual_Merge_Tab__c</columns>
    <columns>ucinn_ascendv2__Field_API_Name__c</columns>
    <columns>ucinn_ascendv2__Type__c</columns>
    <columns>ucinn_ascendv2__Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Manual_Merge_Tab__c</field>
        <operation>contains</operation>
        <value>HAM_PG_Email</value>
    </filters>
    <label>PG Email</label>
    <language>en_US</language>
</ListView>