force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Field__mdt/listViews/ucinn_ascendv2__Merge_Fields_Main_Fields.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__Merge_Fields_Main_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ucinn_ascendv2__Manual_Merge_Tab__c</columns>
    <columns>ucinn_ascendv2__Field_API_Name__c</columns>
    <columns>ucinn_ascendv2__Type__c</columns>
    <columns>ucinn_ascendv2__Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>Merge Fields Main Fields</label>
    <language>en_US</language>
</ListView>